sidebar table storage and rendering

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%= stylesheet_link_tag "nodes", "bootstrap", media: "all"%>
-  <%= javascript_include_tag "jquery", "jquery_ujs", "nodes", "bootstrap"%>
+  <%= javascript_include_tag "jquery", "jquery_ujs", "bootstrap", "nodes"%>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700,400italic' rel='stylesheet' type='text/css'>
