--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -60,7 +60,7 @@
     <div class="feat_page_title">
       <h4><%= Node.last.title %></h4>
     </div>
-    <div class="daily_img">
+    <div class="sidebar_img">
       <%= image_tag "template.jpg" %>
     </div>
     <div class="info clearfix">
