--- a/public/stylesheets/sass/nodes.scss
+++ b/public/stylesheets/sass/nodes.scss
@@ -81,13 +81,12 @@ $border: silver;
   padding: 0;
   float: right;
   border-radius: 5px;
-  height: 800px;
   h3, h4 {
     font-family: $font-family-sans-serif;
     text-align: center;
     margin-top: 10px;
   }
-  .daily_img img {
+  .sidebar_img img {
     max-width: 90%;
     display: block;
     margin: 5% auto;
