--- a/app/views/nodes/_tableform.html.erb
+++ b/app/views/nodes/_tableform.html.erb
@@ -1,2 +1,1 @@
-<input id='node_table_h_' name='node[table[h][]' class='table_h_edit' type='text'>
-<input id='node_table_d_' name='node[table[d][]' class='table_d_edit' type='text'>
+<input id='node_table_h_' name='node[table[h][]' class='table_h_edit' type='text'><input id='node_table_d_' name='node[table[d][]' class='table_d_edit' type='text'>
